fix search button size on safari

--- a/styles/dash.css
+++ b/styles/dash.css
@@ -704,6 +704,7 @@ input#location-search.unfolded {
     outline: none;
     cursor: pointer;
     width: var(--size-controls);
+    height: var(--size-controls);
   }
   
   .search-button img {
