--- a/styles/style.css
+++ b/styles/style.css
@@ -573,6 +573,7 @@ input#location-search.unfolded {
     outline: none;
     cursor: pointer;
     width: var(--size-controls);
+    height: var(--size-controls);
   }
   
 .search-button img {
